# nxt-ai-assistant

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  NOTICE  README.md  SECURITY.md  dev.sh  docker-compose.yml  llms.txt  pyproject.toml  setup_shared.sh
.do/: app.example.yaml
anansi_app/: .env.example  app.py  (+6 more)
chat_orchestrator/: .dockerignore  .doignore  .env.example  .gitignore  Dockerfile  README.md  handler.py  orchestrator_mcp_server.py  project.yml  pyproject.toml
chat_orchestrator/instructions/: customer_instructions.md  expert_instructions.md  staff_instructions.md
chat_orchestrator/orchestrator/: __init__.py  main.py
chat_orchestrator/orchestrator/api/: app.py
chat_orchestrator/orchestrator/clients/: factory.py  gemini.py  openrouter.py
chat_orchestrator/orchestrator/config/: services.yaml  settings.py
chat_orchestrator/orchestrator/experts/: __init__.py  input_detection.py  parameter_confirmation.py  parameter_resolver.py  step_context.py  step_contracts.py  step_registry.py  workflow_executor.py
chat_orchestrator/orchestrator/experts/handlers/: README.md  __init__.py  community_detector.py  community_sizing.py
chat_orchestrator/orchestrator/graphs/: __init__.py  conversation_graph.py  execution_limit_recovery.py  full_conversation_graph.py  persistent_agent_graph.py  persistent_agent_state.py  state.py
chat_orchestrator/orchestrator/graphs/nodes/: __init__.py  ask_about_duplicate.py  ask_resume_failed.py  assign_thread.py  check_escalation.py  expert_handler.py  expert_router.py  init_services.py  parse_command.py  prepare_context.py  prepare_media.py  prepare_tools.py  resolve_auth.py  safety_check.py  save_history.py  save_user_message.py
chat_orchestrator/orchestrator/mini_app/: __init__.py  audit.py  auth.py  router.py  schemas.py
chat_orchestrator/orchestrator/models/: database.py  schemas.py  work_packets.py
chat_orchestrator/orchestrator/services/: agent_event_filter.py  agent_worker.py  artifacts_provider.py  callback_handlers.py  command_parser.py  command_registry.py  context_enrichment.py  context_filter.py  conversation.py  conversation_direction.py  conversation_summarizer.py  dspy_optimizer.py  entity_tagger.py  escalation_service.py  expert_instructions_provider.py  expert_meta_tools.py  expert_tool_runner.py  instructions_provider.py  intent_router.py  jira_webhooks.py  llm_cell_mapper.py  loop_detector.py  lpp_parameter_catalog.py  lpp_parameter_help.py  lpp_parameter_parser.py  metrics_service.py  pending_command_handler.py  pending_decision_service.py  procedure_provider.py  rag.py  rag_provider.py  startup_recovery_service.py  supabase_client.py  telegram_sync.py  telegram_transport.py  thread_assignment.py  tool_executor.py  tool_registry.py  user_agent_service.py  user_permissions.py  (+5 more)
chat_orchestrator/orchestrator/utils/: cron_parser.py  response_sanitizer.py  security_logger.py  session_id.py
chat_orchestrator/scripts/: smoke_llm_provider.py
chat_orchestrator/storage/rag/: knowledge_base.json
chat_orchestrator/supabase/: config.toml
chat_orchestrator/tests/: __init__.py  test_agent_worker_connections.py  test_deployment_manifests.py  test_event_compaction.py  test_execution_limit_recovery.py  test_flag_registry.py  test_hallucination_guard.py  test_headless_expert.py  test_internal_ticket_ref_allocation_migration.py  test_media_group_aggregation.py  test_media_group_security_vectors.py  test_open_source_config.py  test_persistent_agent_llm_gateway.py  test_session_id.py  test_state_channels.py  test_ticket_backend_migration.py  test_user_agent_service.py
chat_orchestrator/tests/api/: test_notify_ticketing.py
chat_orchestrator/tests/clients/: test_gemini_client.py
chat_orchestrator/tests/experts/: __init__.py  conftest.py  test_contract_lint.py  test_copy_template.py  test_distribution_layout.py  test_expert_handler.py  test_expert_router.py  test_fetch_geo_hazard.py  test_generate_design_community.py  test_generate_map_community.py  test_generate_qgis_project.py  test_gtr_analysis_conversation.py  test_lpp_natural_language_parameters_e2e.py  test_lpp_route_dispatch.py  test_package_generator_contracts.py  test_parameter_confirmation.py  test_resolve_community_site.py  test_site_geo_source.py  test_site_layout_geometry.py  test_site_layout_handler.py  test_step_context.py  test_step_contracts.py  test_step_registry.py  test_work_packet_models.py  test_workflow_executor.py
chat_orchestrator/tests/layout/: test_building_footprints.py  test_community_detector.py  test_plot_builder.py  test_quadkeys.py
chat_orchestrator/tests/mini_app/: test_audit_trail.py  test_auth.py  test_router.py  test_schemas.py
chat_orchestrator/tests/models/: test_lpp_inputs.py
chat_orchestrator/tests/services/: test_broadcast_verification_prompt.py  test_callback_handlers_ticketing.py  test_context_filter.py  test_conversation_direction.py  test_design_command_rounds_override.py  test_escalation_service_ticketing.py  test_expert_meta_tools.py  test_intent_router.py  test_loop_detector.py  test_lpp_parameter_catalog.py  test_lpp_parameter_help.py  test_lpp_parameter_parser.py  test_lpp_route_dispatch.py  test_supabase_client_ticketing.py  test_thread_assignment.py  test_tool_executor.py  test_user_permissions.py  test_user_preferences.py  test_work_packet_service.py
(+394 files in other folders)
